// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectItem /> should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />
  <div
    class="sc-bcXGCL gkMwg"
  >
    <a
      class="sc-bcXGCL gudgoe cap-link"
      href="https://capco.dev/admin/alpha/project/project2/edit?_sonata_admin=capco_admin.admin.project&_sonata_name=admin_capco_app_project_edit&_locale=fr-FR"
    >
      Stratégie technologique de l'Etat et services publics
    </a>
    <div
      class="sc-bcXGCL bwuDFj"
    >
      <a
        class="sc-bcXGCL kfWSPh cap-link"
        href="https://capco.dev/themes/immobilier?_locale=fr-FR"
      >
        Immobilier
      </a>
      <span>
        ,   
      </span>
      <a
        class="sc-bcXGCL kfWSPh cap-link"
        href="https://capco.dev/themes/transport?_locale=fr-FR"
      >
        Transport
      </a>
    </div>
  </div>
  <a
    class="sc-bcXGCL gudgoe cap-link"
    href="<mock-value-for-field-"url">"
  >
    &lt;mock-value-for-field-"username"&gt;
  </a>
  <div
    aria-label="Tag public-everybody"
    class="sc-bcXGCL eQscED cap-tag"
    title="public-everybody"
  >
    public-everybody
  </div>
  30/12/2014
  <button
    aria-controls=":r4:"
    aria-describedby=":r1:"
    aria-expanded="false"
    aria-haspopup="menu"
    aria-label="global.plus"
    class="sc-bcXGCL cxVtKf cap-buttonQuickAction cap-menu__disclosure"
    id=":r0:"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="sc-bcXGCL sc-oZHua dXTqeC hQQZty cap-icon cap-buttonQuickAction-icon"
      fill="currentColor"
      height="1em"
      viewBox="0 0 12 4"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 2.087a1.304 1.304 0 1 0 2.609 0 1.304 1.304 0 0 0-2.609 0M4.696 2.087a1.304 1.304 0 1 0 2.609 0 1.304 1.304 0 0 0-2.61 0M9.391 2.087a1.304 1.304 0 1 0 2.61 0 1.304 1.304 0 0 0-2.61 0"
      />
    </svg>
  </button>
  <div
    style="position: absolute; top: 0px; left: 0px; --popover-overflow-padding: 8px;"
  >
    <div
      class="cap-tooltip"
      data-dialog=""
      data-placing="true"
      hidden=""
      id=":r1:"
      role="tooltip"
      style="position: relative; z-index: 1800; display: none;"
      tabindex="-1"
    >
      <div
        aria-hidden="true"
        style="position: absolute; font-size: 16px; width: 1em; height: 1em; pointer-events: none; fill: #3D454C; stroke: var(--ak-layer-border, none); stroke-width: 0;"
      >
        <svg
          display="block"
          viewBox="0 0 30 30"
        >
          <g
            transform="rotate(180 15 15)"
          >
            <path
              d="M23 27.8C24.1 29 26.4 30 28 30H30H0H2C3.7 30 5.9 29 7 27.8L14 20.6C14.7 19.8 15.3 19.8 16 20.6L23 27.8Z"
              fill="none"
              mask="url(#:r7:)"
            />
            <path
              d="M23 27.8C24.1 29 26.4 30 28 30H30H0H2C3.7 30 5.9 29 7 27.8L14 20.6C14.7 19.8 15.3 19.8 16 20.6L23 27.8Z"
              stroke="none"
            />
            <mask
              id=":r7:"
              maskUnits="userSpaceOnUse"
            >
              <rect
                fill="white"
                height="30"
                stroke="black"
                width="60"
                x="-15"
                y="0"
              />
            </mask>
          </g>
        </svg>
      </div>
      <div
        class="sc-bcXGCL bdghCN"
      >
        global.plus
      </div>
    </div>
  </div>
  <div
    style="position: absolute; top: 0px; left: 0px; --popover-overflow-padding: 8px;"
  >
    <div
      aria-labelledby=":r0:"
      aria-orientation="vertical"
      class="sc-bcXGCL bvFpIu cap-menu__list"
      data-dialog=""
      data-placing="true"
      hidden=""
      id=":r4:"
      role="menu"
      style="position: relative; display: none;"
      tabindex="0"
    >
      <button
        class="sc-bcXGCL iLHRqt cap-menu__item"
        id=":r8:"
        role="menuitem"
        type="button"
      >
        <p
          class="sc-bcXGCL kxBQAH cap-text"
        >
           action_show 
        </p>
      </button>
      <button
        aria-controls="id-g"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="sc-bcXGCL iLHRqt cap-menu__item"
        id=":ra:"
        role="menuitem"
        type="button"
      >
        <p
          class="sc-bcXGCL kxBQAH cap-text"
        >
           project.download.button 
        </p>
      </button>
      <div
        aria-label="delete-confirmation"
        aria-modal="true"
        data-dialog="true"
        hidden=""
        id="id-g"
        role="dialog"
        style="display: none;"
        tabindex="-1"
      />
      <button
        aria-controls="id-g"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="sc-bcXGCL iLHRqt cap-menu__item"
        id=":rc:"
        role="menuitem"
        type="button"
      >
        <p
          class="sc-bcXGCL kxBQAH cap-text"
        >
           admin.global.delete 
        </p>
      </button>
      <div
        aria-label="delete-confirmation"
        aria-modal="true"
        data-dialog="true"
        hidden=""
        id="id-g"
        role="dialog"
        style="display: none;"
        tabindex="-1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`<ProjectItem /> should render correctly without authors 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />
  <div
    class="sc-bcXGCL gkMwg"
  >
    <a
      class="sc-bcXGCL gudgoe cap-link"
      href="https://capco.dev/admin/alpha/project/project2/edit?_sonata_admin=capco_admin.admin.project&_sonata_name=admin_capco_app_project_edit&_locale=fr-FR"
    >
      Stratégie technologique de l'Etat et services publics
    </a>
    <div
      class="sc-bcXGCL bwuDFj"
    >
      <a
        class="sc-bcXGCL kfWSPh cap-link"
        href="https://capco.dev/themes/immobilier?_locale=fr-FR"
      >
        Immobilier
      </a>
      <span>
        ,   
      </span>
      <a
        class="sc-bcXGCL kfWSPh cap-link"
        href="https://capco.dev/themes/transport?_locale=fr-FR"
      >
        Transport
      </a>
    </div>
  </div>
  <a
    class="sc-bcXGCL gudgoe cap-link"
    href="<mock-value-for-field-"url">"
  >
    &lt;mock-value-for-field-"username"&gt;
  </a>
  <div
    aria-label="Tag public-everybody"
    class="sc-bcXGCL eQscED cap-tag"
    title="public-everybody"
  >
    public-everybody
  </div>
  30/12/2014
  <button
    aria-controls=":ri:"
    aria-describedby=":rf:"
    aria-expanded="false"
    aria-haspopup="menu"
    aria-label="global.plus"
    class="sc-bcXGCL cxVtKf cap-buttonQuickAction cap-menu__disclosure"
    id=":re:"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="sc-bcXGCL sc-oZHua dXTqeC hQQZty cap-icon cap-buttonQuickAction-icon"
      fill="currentColor"
      height="1em"
      viewBox="0 0 12 4"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 2.087a1.304 1.304 0 1 0 2.609 0 1.304 1.304 0 0 0-2.609 0M4.696 2.087a1.304 1.304 0 1 0 2.609 0 1.304 1.304 0 0 0-2.61 0M9.391 2.087a1.304 1.304 0 1 0 2.61 0 1.304 1.304 0 0 0-2.61 0"
      />
    </svg>
  </button>
  <div
    style="position: absolute; top: 0px; left: 0px; --popover-overflow-padding: 8px;"
  >
    <div
      class="cap-tooltip"
      data-dialog=""
      data-placing="true"
      hidden=""
      id=":rf:"
      role="tooltip"
      style="position: relative; z-index: 1800; display: none;"
      tabindex="-1"
    >
      <div
        aria-hidden="true"
        style="position: absolute; font-size: 16px; width: 1em; height: 1em; pointer-events: none; fill: #3D454C; stroke: var(--ak-layer-border, none); stroke-width: 0;"
      >
        <svg
          display="block"
          viewBox="0 0 30 30"
        >
          <g
            transform="rotate(180 15 15)"
          >
            <path
              d="M23 27.8C24.1 29 26.4 30 28 30H30H0H2C3.7 30 5.9 29 7 27.8L14 20.6C14.7 19.8 15.3 19.8 16 20.6L23 27.8Z"
              fill="none"
              mask="url(#:rl:)"
            />
            <path
              d="M23 27.8C24.1 29 26.4 30 28 30H30H0H2C3.7 30 5.9 29 7 27.8L14 20.6C14.7 19.8 15.3 19.8 16 20.6L23 27.8Z"
              stroke="none"
            />
            <mask
              id=":rl:"
              maskUnits="userSpaceOnUse"
            >
              <rect
                fill="white"
                height="30"
                stroke="black"
                width="60"
                x="-15"
                y="0"
              />
            </mask>
          </g>
        </svg>
      </div>
      <div
        class="sc-bcXGCL bdghCN"
      >
        global.plus
      </div>
    </div>
  </div>
  <div
    style="position: absolute; top: 0px; left: 0px; --popover-overflow-padding: 8px;"
  >
    <div
      aria-labelledby=":re:"
      aria-orientation="vertical"
      class="sc-bcXGCL bvFpIu cap-menu__list"
      data-dialog=""
      data-placing="true"
      hidden=""
      id=":ri:"
      role="menu"
      style="position: relative; display: none;"
      tabindex="0"
    >
      <button
        class="sc-bcXGCL iLHRqt cap-menu__item"
        id=":rm:"
        role="menuitem"
        type="button"
      >
        <p
          class="sc-bcXGCL kxBQAH cap-text"
        >
           action_show 
        </p>
      </button>
      <button
        aria-controls="id-g"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="sc-bcXGCL iLHRqt cap-menu__item"
        id=":ro:"
        role="menuitem"
        type="button"
      >
        <p
          class="sc-bcXGCL kxBQAH cap-text"
        >
           project.download.button 
        </p>
      </button>
      <div
        aria-label="delete-confirmation"
        aria-modal="true"
        data-dialog="true"
        hidden=""
        id="id-g"
        role="dialog"
        style="display: none;"
        tabindex="-1"
      />
      <button
        aria-controls="id-g"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="sc-bcXGCL iLHRqt cap-menu__item"
        id=":rq:"
        role="menuitem"
        type="button"
      >
        <p
          class="sc-bcXGCL kxBQAH cap-text"
        >
           admin.global.delete 
        </p>
      </button>
      <div
        aria-label="delete-confirmation"
        aria-modal="true"
        data-dialog="true"
        hidden=""
        id="id-g"
        role="dialog"
        style="display: none;"
        tabindex="-1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`<ProjectItem /> should render correctly without exportable steps 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />
  <div
    class="sc-bcXGCL gkMwg"
  >
    <a
      class="sc-bcXGCL gudgoe cap-link"
      href="https://capco.dev/admin/alpha/project/project2/edit?_sonata_admin=capco_admin.admin.project&_sonata_name=admin_capco_app_project_edit&_locale=fr-FR"
    >
      Stratégie technologique de l'Etat et services publics
    </a>
    <div
      class="sc-bcXGCL bwuDFj"
    >
      <a
        class="sc-bcXGCL kfWSPh cap-link"
        href="https://capco.dev/themes/immobilier?_locale=fr-FR"
      >
        Immobilier
      </a>
      <span>
        ,   
      </span>
      <a
        class="sc-bcXGCL kfWSPh cap-link"
        href="https://capco.dev/themes/transport?_locale=fr-FR"
      >
        Transport
      </a>
    </div>
  </div>
  <a
    class="sc-bcXGCL gudgoe cap-link"
    href="<mock-value-for-field-"url">"
  >
    &lt;mock-value-for-field-"username"&gt;
  </a>
  <div
    aria-label="Tag public-everybody"
    class="sc-bcXGCL eQscED cap-tag"
    title="public-everybody"
  >
    public-everybody
  </div>
  30/12/2014
  <button
    aria-controls=":r1e:"
    aria-describedby=":r1b:"
    aria-expanded="false"
    aria-haspopup="menu"
    aria-label="global.plus"
    class="sc-bcXGCL cxVtKf cap-buttonQuickAction cap-menu__disclosure"
    id=":r1a:"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="sc-bcXGCL sc-oZHua dXTqeC hQQZty cap-icon cap-buttonQuickAction-icon"
      fill="currentColor"
      height="1em"
      viewBox="0 0 12 4"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 2.087a1.304 1.304 0 1 0 2.609 0 1.304 1.304 0 0 0-2.609 0M4.696 2.087a1.304 1.304 0 1 0 2.609 0 1.304 1.304 0 0 0-2.61 0M9.391 2.087a1.304 1.304 0 1 0 2.61 0 1.304 1.304 0 0 0-2.61 0"
      />
    </svg>
  </button>
  <div
    style="position: absolute; top: 0px; left: 0px; --popover-overflow-padding: 8px;"
  >
    <div
      class="cap-tooltip"
      data-dialog=""
      data-placing="true"
      hidden=""
      id=":r1b:"
      role="tooltip"
      style="position: relative; z-index: 1800; display: none;"
      tabindex="-1"
    >
      <div
        aria-hidden="true"
        style="position: absolute; font-size: 16px; width: 1em; height: 1em; pointer-events: none; fill: #3D454C; stroke: var(--ak-layer-border, none); stroke-width: 0;"
      >
        <svg
          display="block"
          viewBox="0 0 30 30"
        >
          <g
            transform="rotate(180 15 15)"
          >
            <path
              d="M23 27.8C24.1 29 26.4 30 28 30H30H0H2C3.7 30 5.9 29 7 27.8L14 20.6C14.7 19.8 15.3 19.8 16 20.6L23 27.8Z"
              fill="none"
              mask="url(#:r1h:)"
            />
            <path
              d="M23 27.8C24.1 29 26.4 30 28 30H30H0H2C3.7 30 5.9 29 7 27.8L14 20.6C14.7 19.8 15.3 19.8 16 20.6L23 27.8Z"
              stroke="none"
            />
            <mask
              id=":r1h:"
              maskUnits="userSpaceOnUse"
            >
              <rect
                fill="white"
                height="30"
                stroke="black"
                width="60"
                x="-15"
                y="0"
              />
            </mask>
          </g>
        </svg>
      </div>
      <div
        class="sc-bcXGCL bdghCN"
      >
        global.plus
      </div>
    </div>
  </div>
  <div
    style="position: absolute; top: 0px; left: 0px; --popover-overflow-padding: 8px;"
  >
    <div
      aria-labelledby=":r1a:"
      aria-orientation="vertical"
      class="sc-bcXGCL bvFpIu cap-menu__list"
      data-dialog=""
      data-placing="true"
      hidden=""
      id=":r1e:"
      role="menu"
      style="position: relative; display: none;"
      tabindex="0"
    >
      <button
        class="sc-bcXGCL iLHRqt cap-menu__item"
        id=":r1i:"
        role="menuitem"
        type="button"
      >
        <p
          class="sc-bcXGCL kxBQAH cap-text"
        >
           action_show 
        </p>
      </button>
      <button
        aria-controls="id-g"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="sc-bcXGCL iLHRqt cap-menu__item"
        id=":r1k:"
        role="menuitem"
        type="button"
      >
        <p
          class="sc-bcXGCL kxBQAH cap-text"
        >
           admin.global.delete 
        </p>
      </button>
      <div
        aria-label="delete-confirmation"
        aria-modal="true"
        data-dialog="true"
        hidden=""
        id="id-g"
        role="dialog"
        style="display: none;"
        tabindex="-1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`<ProjectItem /> should render correctly without themes 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />
  <div
    class="sc-bcXGCL gkMwg"
  >
    <a
      class="sc-bcXGCL gudgoe cap-link"
      href="https://capco.dev/admin/alpha/project/project2/edit?_sonata_admin=capco_admin.admin.project&_sonata_name=admin_capco_app_project_edit&_locale=fr-FR"
    >
      Stratégie technologique de l'Etat et services publics
    </a>
    <div
      class="sc-bcXGCL bwuDFj"
    />
  </div>
  <a
    class="sc-bcXGCL gudgoe cap-link"
    href="<mock-value-for-field-"url">"
  >
    &lt;mock-value-for-field-"username"&gt;
  </a>
  <div
    aria-label="Tag public-everybody"
    class="sc-bcXGCL eQscED cap-tag"
    title="public-everybody"
  >
    public-everybody
  </div>
  30/12/2014
  <button
    aria-controls=":r10:"
    aria-describedby=":rt:"
    aria-expanded="false"
    aria-haspopup="menu"
    aria-label="global.plus"
    class="sc-bcXGCL cxVtKf cap-buttonQuickAction cap-menu__disclosure"
    id=":rs:"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="sc-bcXGCL sc-oZHua dXTqeC hQQZty cap-icon cap-buttonQuickAction-icon"
      fill="currentColor"
      height="1em"
      viewBox="0 0 12 4"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 2.087a1.304 1.304 0 1 0 2.609 0 1.304 1.304 0 0 0-2.609 0M4.696 2.087a1.304 1.304 0 1 0 2.609 0 1.304 1.304 0 0 0-2.61 0M9.391 2.087a1.304 1.304 0 1 0 2.61 0 1.304 1.304 0 0 0-2.61 0"
      />
    </svg>
  </button>
  <div
    style="position: absolute; top: 0px; left: 0px; --popover-overflow-padding: 8px;"
  >
    <div
      class="cap-tooltip"
      data-dialog=""
      data-placing="true"
      hidden=""
      id=":rt:"
      role="tooltip"
      style="position: relative; z-index: 1800; display: none;"
      tabindex="-1"
    >
      <div
        aria-hidden="true"
        style="position: absolute; font-size: 16px; width: 1em; height: 1em; pointer-events: none; fill: #3D454C; stroke: var(--ak-layer-border, none); stroke-width: 0;"
      >
        <svg
          display="block"
          viewBox="0 0 30 30"
        >
          <g
            transform="rotate(180 15 15)"
          >
            <path
              d="M23 27.8C24.1 29 26.4 30 28 30H30H0H2C3.7 30 5.9 29 7 27.8L14 20.6C14.7 19.8 15.3 19.8 16 20.6L23 27.8Z"
              fill="none"
              mask="url(#:r13:)"
            />
            <path
              d="M23 27.8C24.1 29 26.4 30 28 30H30H0H2C3.7 30 5.9 29 7 27.8L14 20.6C14.7 19.8 15.3 19.8 16 20.6L23 27.8Z"
              stroke="none"
            />
            <mask
              id=":r13:"
              maskUnits="userSpaceOnUse"
            >
              <rect
                fill="white"
                height="30"
                stroke="black"
                width="60"
                x="-15"
                y="0"
              />
            </mask>
          </g>
        </svg>
      </div>
      <div
        class="sc-bcXGCL bdghCN"
      >
        global.plus
      </div>
    </div>
  </div>
  <div
    style="position: absolute; top: 0px; left: 0px; --popover-overflow-padding: 8px;"
  >
    <div
      aria-labelledby=":rs:"
      aria-orientation="vertical"
      class="sc-bcXGCL bvFpIu cap-menu__list"
      data-dialog=""
      data-placing="true"
      hidden=""
      id=":r10:"
      role="menu"
      style="position: relative; display: none;"
      tabindex="0"
    >
      <button
        class="sc-bcXGCL iLHRqt cap-menu__item"
        id=":r14:"
        role="menuitem"
        type="button"
      >
        <p
          class="sc-bcXGCL kxBQAH cap-text"
        >
           action_show 
        </p>
      </button>
      <button
        aria-controls="id-g"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="sc-bcXGCL iLHRqt cap-menu__item"
        id=":r16:"
        role="menuitem"
        type="button"
      >
        <p
          class="sc-bcXGCL kxBQAH cap-text"
        >
           project.download.button 
        </p>
      </button>
      <div
        aria-label="delete-confirmation"
        aria-modal="true"
        data-dialog="true"
        hidden=""
        id="id-g"
        role="dialog"
        style="display: none;"
        tabindex="-1"
      />
      <button
        aria-controls="id-g"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="sc-bcXGCL iLHRqt cap-menu__item"
        id=":r18:"
        role="menuitem"
        type="button"
      >
        <p
          class="sc-bcXGCL kxBQAH cap-text"
        >
           admin.global.delete 
        </p>
      </button>
      <div
        aria-label="delete-confirmation"
        aria-modal="true"
        data-dialog="true"
        hidden=""
        id="id-g"
        role="dialog"
        style="display: none;"
        tabindex="-1"
      />
    </div>
  </div>
</DocumentFragment>
`;
